2006-08-12  Albert Chu <chu11@llnl.gov>

	* bmc-config/: Support multiple invocations for --section option.
	
2006-08-11  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_config.c (ipmipower_config_setup): Call
	secure_malloc only if in non-debug mode.

	* bmc-config/: Support --section option. 
	
2006-08-10  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmi-wrappers.h, ipmipower/src/ipmi-wrappers.c
	(Fiid_obj_clear): Return void instead of int8_t.

	* ipmipower/src/ipmi-wrappers.h, ipmipower/src/ipmi-wrappers.c
	(Fiid_obj_set_data): New function.

	* ipmipower/src/ipmi-wrappers.h, ipmipower/src/ipmi-wrappers.c
	(Fiid_obj_clear_field): Return void instead of int8_t.

	* ipmipower/src/ipmipower_check.c
	(ipmipower_check_rakp_2_key_exchange_authentication_code): Add
	supermicro IPMI 2.0 workarounds.
	
2006-08-09  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/: Change section names with "LAN" to "Lan" for
	backwards consistency.

	* bmc-config/src/bmc-commit.c (bmc_commit_file): Add section to
	error output.

	* libfreeipmi/src/ipmi-messaging-support-cmds.c
	(fill_cmd_set_channel_access),
	libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c
	(ipmi_cmd_set_channel_access): Fix parameter check bug.

	* Makefile.am: Fix distcheck.

	* ipmi-sensors/src/Makefile.am: Fix install bug.

	* freeipmi.spec.in: Fix packaging bug.

	bmc-config various fixes

	* bmc-config/src/: Support multiple -k values on the command line;
	
	* bmc-config/src/: Globally check value of malloc, calloc, and strdup.

	Re-support -k and -f options on the command line at the same time.

	* bmc-config/src/bmc-commit.c (bmc_keypair_feed): New function.

	* bmc-config/src/bmc-commit.c (bmc_commit_file): Support keypairs
	and filenames both on the commandline.

	* bmc-config/src/bmc-argp.c (args_validate): Fix check of only
	one of -k and -f for when you --commit.
	
2006-08-08  Albert Chu <chu11@llnl.gov>

	ipmi-sensors and ipmi-sel convenience code cleanup and re-org in